--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
       <p>
 	</center>
 	<div style="text-align:center; margin-top:20px;">
-            <a href="https://lin.ee/OHk6Rn7" class="btn btn-line">📱 LINE 官方帳號</a>
-            <a href="tel:0912356331" class="btn btn-call" button style="background-color: DodgerBlue;">📞 立即來電</button></a>
+            <a href="https://lin.ee/OHk6Rn7" class="btn btn-line">🟢 LINE 官方帳號</a>
+            <a href="https://bit.ly/NaturalUncleTW" class="btn btn-call" button style="background-color: DodgerBlue;">🔵 Facebook 粉絲專頁</button></a>
         </div>
     </main>
 
