--- a/bulk-booking.html
+++ b/bulk-booking.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>團購預約｜自然大叔 線上預約平台</title>
+  <title>大量清洗｜自然大叔 線上預約平台</title>
   <style>
     :root {
       --bg-color: #ffffff;
       --text-color: #333;
-      --card-bg: #f0f2f5;
+      --card-bg: #f8f9fa;
       --card-border: #ddd;
       --title-color: #007BFF;
       --button-bg: #007BFF;
@@ -39,35 +39,26 @@
       padding: 20px;
       background: var(--card-bg);
       border-bottom: 1px solid var(--card-border);
-      position: relative;
     }
     header h1 {
       color: var(--title-color);
       margin: 0;
     }
-    .theme-toggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 6px;
-      background: var(--button-bg);
-      color: var(--button-text);
-      cursor: pointer;
-      font-size: 0.9rem;
-    }
-    section {
+    main {
       max-width: 900px;
       margin: 20px auto;
       padding: 20px;
-      background: var(--card-bg);
-      border: 1px solid var(--card-border);
-      border-radius: 10px;
     }
     h2 {
       color: var(--title-color);
       margin-top: 0;
+    }
+    section {
+      background: var(--card-bg);
+      border: 1px solid var(--card-border);
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
     }
     textarea {
       width: 100%;
@@ -78,10 +69,15 @@
       resize: vertical;
       background: #fff;
       color: var(--text-color);
+      box-sizing: border-box;
+    }
+    body.dark-mode textarea {
+      background: #2a2a2a;
+      color: #fff;
     }
     .nav-buttons {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       margin: 30px 0;
     }
     .nav-buttons a {
@@ -100,46 +96,36 @@
 </head>
 <body>
   <header>
-    <h1>團購預約｜自然大叔</h1>
-    <button class="theme-toggle" onclick="toggleTheme()">切換主題</button>
+    <h1>大量清洗｜自然大叔</h1>
   </header>
 
-  <section>
-    <h2>【團購預約與多台清洗優惠說明】</h2>
-    <p>為了回饋鄰里與大量需求的客戶，我們提供團購優惠價格與專案清洗安排，詳細說明如下：</p>
-    <p>🔸 <strong>什麼是團購優惠？</strong></p>
+  <main>
+    <h2>【整棟、民宿、房東類型大量清洗】</h2>
     <ul>
-      <li>適用於左右鄰居、正對面鄰居</li>
-      <li>大樓住戶：同棟內不同住戶皆可適用</li>
-      <li>條件為清洗期間 <strong>清洗設備無需搬上車</strong> 即可享有團購優惠！</li>
+      <li>整棟大樓清洗</li>
+      <li>民宿、套房集中清洗</li>
+      <li>房東一次性安排多戶或多台清洗</li>
     </ul>
-  </section>
-
-  <section>
-    <h2>適用項目與預約資訊</h2>
-    <p>請填寫以下資訊以利作業與報價估算：</p>
+    <p>👉 如有 <strong>10 台以上</strong> 冷氣或家電清洗需求，請詳細填寫於下方說明：</p>
     <ul>
-      <li>每戶冷氣數量（分離式／吊隱式／特殊機型請註明）</li>
-      <li>洗衣機數量（限直立式）</li>
-      <li>水塔清洗需求（如有）</li>
+      <li>冷氣清洗台數（可簡述機型與數量）</li>
+      <li>聯絡方式（電話／LINE／Facebook）</li>
     </ul>
-    <textarea placeholder="請輸入您的需求..."></textarea>
-  </section>
 
-  <div class="nav-buttons">
-    <a href="index.html">回首頁</a>
-  </div>
+    <section>
+      <h2>【多台預約說明填寫】</h2>
+      <textarea placeholder="請輸入您的需求..."></textarea>
+    </section>
+
+    <div class="nav-buttons">
+      <a href="index.html">← 回首頁</a>
+      <a href="contact.html">下一步 ➜ 【聯繫名稱說明】</a>
+    </div>
+  </main>
 
   <script>
-    function toggleTheme() {
-      document.body.classList.toggle('dark-mode');
-      localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
-    }
     (function () {
-      const saved = localStorage.getItem('theme');
-      if (saved) {
-        document.body.classList.toggle('dark-mode', saved === 'dark');
-      } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark-mode');
       }
     })();
