--- a/ac-booking.html
+++ b/ac-booking.html
@@ -18,14 +18,14 @@
     .page-header {
       background: #f3f4f6; /* 灰底 */
       border-bottom: 1px solid #d1d5db;
-      padding: 30px 20px; /* 高度與內距一致 */
-      text-align: center; /* ✅ 標題置中 */
+      padding: 30px 20px;
+      text-align: center;
     }
     .page-header h1 {
       margin: 0;
       font-size: 2rem;
       font-weight: bold;
-      color: #2563eb; /* 新版藍色 */
+      color: #2563eb;
     }
 
     form {
@@ -82,12 +82,13 @@
       border: 1px solid #d1d5db;
     }
 
-    /* ✅ 按鈕區塊 */
+    /* ✅ 按鈕區塊：始終並排 */
     .btn-group {
       display: flex;
-      gap: 12px;
+      justify-content: space-between;
       margin: 30px auto;
       max-width: 800px;
+      gap: 12px;
     }
     .btn-group a, .btn-group button {
       flex: 1;
@@ -101,6 +102,7 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background 0.2s;
+      white-space: nowrap; /* ✅ 避免換行 */
     }
     .btn-group a:hover, .btn-group button:hover {
       background: #1e40af;
@@ -111,7 +113,7 @@
       margin-left: 3px;
     }
 
-    /* 深色模式自動跟隨 */
+    /* 深色模式 */
     @media (prefers-color-scheme: dark) {
       body { background: #111827; color: #ffffff; }  
       .page-header { background: #1f2937; border-bottom: 1px solid #374151; }
@@ -121,25 +123,19 @@
       label, .radio-group label, .checkbox-group label { color: #ffffff; }
     }
 
-    /* ✅ RWD：手機優化 */
+    /* ✅ 手機優化：按鈕縮小但仍橫排 */
     @media (max-width: 600px) {
-      .page-header h1 {
-        font-size: 1.5rem;
-      }
-      .note-img img {
-        width: 100%;
-      }
-      .btn-group {
-        flex-direction: column;
-      }
+      .page-header h1 { font-size: 1.5rem; }
+      .note-img img { width: 100%; }
       .btn-group a, .btn-group button {
-        width: 100%;
+        font-size: 0.9rem;
+        padding: 12px;
       }
     }
   </style>
 </head>
 <body>
-  <!-- ✅ 頂部標題區塊 -->
+  <!-- 頂部標題 -->
   <div class="page-header">
     <h1>冷氣清洗 預約表單</h1>
   </div>
@@ -207,7 +203,7 @@
       </div>
     </div>
 
-    <!-- ✅ 導向按鈕 -->
+    <!-- 導向按鈕 -->
     <div class="btn-group">
       <a href="index.html">← 返回首頁</a>
       <button type="submit">下一步 ➜ 防霉・消毒【加購服務專區】</button>
