--- a/other-service.html
+++ b/other-service.html
@@ -23,13 +23,12 @@
       :root {
         --bg: #121212;
         --text: #f5f5f5;
-        --primary: #2563eb; /* ✅ 深色模式同樣新版藍 */
+        --primary: #2563eb;
       }
     }
 
-    /* ✅ 頂部標題區塊，統一 bulk-booking 風格 */
     .page-header {
-      background: #f3f4f6; /* 灰底 */
+      background: #f3f4f6;
       border-bottom: 1px solid #d1d5db;
       padding: 30px 20px;
       text-align: center;
@@ -99,12 +98,11 @@
       resize: vertical;
       font-size: 1rem;
       margin: 10px;
-      display: none; /* ✅ 預設隱藏 */
+      display: none;
     }
   </style>
 </head>
 <body>
-  <!-- ✅ 頂部標題區塊 -->
   <div class="page-header">
     <h1>其他清洗｜自然大叔</h1>
   </div>
@@ -188,33 +186,21 @@
         textarea.style.display = checkbox.checked ? "block" : "none";
       });
     });
-  </script>
-  <script>
-  // 頁面載入時自動檢查 localStorage 的模式
-  (function () {
-    const userTheme = localStorage.getItem("theme");
-    if (userTheme === "dark") {
-      document.body.classList.add("dark-mode");
-    } else if (userTheme === "light") {
-      document.body.classList.remove("dark-mode");
-    } else {
-      // 如果沒選過，就跟隨系統
-      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        document.body.classList.add("dark-mode");
-      }
-    }
-  })();
 
-  // 提供一個切換函式（首頁 index.html 的按鈕會用到）
-  function toggleTheme() {
-    if (document.body.classList.contains("dark-mode")) {
-      document.body.classList.remove("dark-mode");
-      localStorage.setItem("theme", "light");
-    } else {
-      document.body.classList.add("dark-mode");
-      localStorage.setItem("theme", "dark");
-    }
-  }
-</script>
+    // ✅ 與首頁 index.html 同步深色/淺色模式
+    (function () {
+      const userTheme = localStorage.getItem("theme");
+      if (userTheme === "dark") {
+        document.documentElement.setAttribute("data-theme", "dark");
+      } else if (userTheme === "light") {
+        document.documentElement.setAttribute("data-theme", "light");
+      } else {
+        // 沒設定則依照系統
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          document.documentElement.setAttribute("data-theme", "dark");
+        }
+      }
+    })();
+  </script>
 </body>
 </html>
