--- a/ac-booking.html
+++ b/ac-booking.html
@@ -20,24 +20,12 @@
       border-bottom: 1px solid #d1d5db;
       padding: 30px 20px;
       text-align: center;
-      position: relative;
     }
     .page-header h1 {
       margin: 0;
       font-size: 2rem;
       font-weight: bold;
       color: #2563eb;
-    }
-
-    /* 🌙 主題切換按鈕 */
-    .theme-toggle {
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      background: none;
-      border: none;
-      font-size: 1.5rem;
-      cursor: pointer;
     }
 
     form {
@@ -141,16 +129,15 @@
     }
 
     /* 深色模式 */
-    body.dark {
-      background: #111827;
-      color: #ffffff;
+    @media (prefers-color-scheme: dark) {
+      body { background: #111827; color: #ffffff; }
+      .page-header { background: #1f2937; border-bottom: 1px solid #374151; }
+      .page-header h1 { color: #3b82f6; }
+      .section { border: 1px solid #374151; background: #1f2937; }
+      .section h2 { color: #3b82f6; }
+      label, .radio-group label, .checkbox-group label { color: #ffffff; }
+      .hidden-input input { background: #374151; color: #fff; border: 1px solid #555; }
     }
-    body.dark .page-header { background: #1f2937; border-bottom: 1px solid #374151; }
-    body.dark .page-header h1 { color: #3b82f6; }
-    body.dark .section { border: 1px solid #374151; background: #1f2937; }
-    body.dark .section h2 { color: #3b82f6; }
-    body.dark label, body.dark .radio-group label, body.dark .checkbox-group label { color: #ffffff; }
-    body.dark .hidden-input input { background: #374151; color: #fff; border: 1px solid #555; }
 
     /* ✅ 手機優化 */
     @media (max-width: 600px) {
@@ -167,7 +154,6 @@
   <!-- 頂部標題 -->
   <div class="page-header">
     <h1>冷氣清洗 預約表單</h1>
-    <button class="theme-toggle" id="themeToggle">🌙</button>
   </div>
 
   <form action="addon-service.html" method="get">
@@ -269,36 +255,29 @@
 
       radios.forEach(radio => {
         radio.addEventListener("change", () => {
-          moreInput.style.display = moreOption.checked ? "block" : "none";
+          if (moreOption.checked) {
+            moreInput.style.display = "block";
+          } else {
+            moreInput.style.display = "none";
+          }
         });
       });
-
-      // 🌙 主題模式切換
-      const body = document.body;
-      const toggleBtn = document.getElementById("themeToggle");
-
-      function setTheme(mode) {
-        if (mode === "dark") {
-          body.classList.add("dark");
-          toggleBtn.textContent = "🌞";
-        } else {
-          body.classList.remove("dark");
-          toggleBtn.textContent = "🌙";
-        }
-        localStorage.setItem("theme", mode);
-      }
-
-      // 初始化主題：localStorage > 系統偏好
-      const savedTheme = localStorage.getItem("theme");
-      if (savedTheme) {
-        setTheme(savedTheme);
-      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        setTheme("dark");
-      } else {
-        setTheme("light");
-      }
-      });
     });
+
+    // ✅ 跨頁同步深色/淺色模式
+    (function () {
+      const userTheme = localStorage.getItem("theme");
+      if (userTheme === "dark") {
+        document.body.classList.add("dark-mode");
+      } else if (userTheme === "light") {
+        document.body.classList.remove("dark-mode");
+      } else {
+        // 如果沒選過，就跟隨系統
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          document.body.classList.add("dark-mode");
+        }
+      }
+    })();
   </script>
 </body>
 </html>
