--- a/bulk-booking.html
+++ b/bulk-booking.html
@@ -156,6 +156,12 @@
       localStorage.setItem("theme", "dark");
     }
   }
+   // 跨頁同步
+    window.addEventListener('storage', (event) => {
+      if (event.key === 'theme') {
+        applyTheme(event.newValue);
+      }
+    });
 </script>
 </body>
 </html>
