--- a/other-service.html
+++ b/other-service.html
@@ -201,6 +201,12 @@
         }
       }
     })();
+        // 跨頁同步
+    window.addEventListener('storage', (event) => {
+      if (event.key === 'theme') {
+        applyTheme(event.newValue);
+      }
+    });
   </script>
 </body>
 </html>
